--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </header>
 
   <section id="home" class="hero">
-    <img src="img/your-hero-image.png" alt="Dental Clinic" style="width:50%">
+    <img src="img/your-hero-image.png" alt="Dental Clinic" style="width:200px; height:auto; border-radius:12px;">
     <br>
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">Get in Touch</button>
   </section>
