--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
   </header>
 
   <section id="home" class="hero">
-    <img src="img/your-hero-image.png" alt="Dental Clinic" style="width:200px; height:auto; border-radius:12px;">
+    <img src="img/your-hero-image.png" alt="Dental Clinic">
     <br>
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">Get in Touch</button>
   </section>
 
   <section id="about">
-    <img src="img/about.jpg" alt="TP Dental Setia Alam Logo" class="logo">
+    <img src="img/about.jpg" alt="TP Dental Setia Alam Logo" class="logo" style="width:200px; height:auto; border-radius:12px;">
     <h2>TP DENTAL SETIA ALAM</h2>
     <p>is committed in delivering the best comprehensive treatment in each patient. We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
     We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, all within a professional and welcoming environment.</p>
@@ -138,7 +138,7 @@
       After leaving Ministry of Health in 2019, Dr Kelvin has been a full time private practioner. His focus is mainly on general dentistry, dentures and minor oral surgery.</p>
     </div>
     <div class="doctor-photo">
-      <img src="img/dr.kelvin.png" alt="Dr Kelvin Quah Photo">
+      <img src="img/dr.kelvin.png" alt="Dr Kelvin Quah Photo"style="width:200px; height:auto;">
     </div>
   </section>
 
