--- a/index.html
+++ b/index.html
@@ -113,12 +113,30 @@
     <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">Get in Touch</button>
   </section>
 
-  <section id="about">
-    <img src="img/about.jpg" alt="TP Dental Setia Alam Logo" class="logo">
-    <h2>TP DENTAL SETIA ALAM</h2>
-    <p>is committed in delivering the best comprehensive treatment in each patient. We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
-    We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, all within a professional and welcoming environment.</p>
-  </section>
+  <section id="about" style="padding:60px 20px;">
+  <h2 style="text-align:center; font-weight:700;">About Us</h2>
+  <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:40px; margin-top:30px;">
+
+    <!-- 左边文字 -->
+    <div style="flex:1; min-width:250px; text-align:left;">
+      <h3 style="font-weight:700;">TP DENTAL SETIA ALAM</h3>
+      <p>
+        is committed in delivering the best comprehensive treatment in each patient. 
+        We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.
+        <br><br>
+        We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile,
+        all within a professional and welcoming environment.
+      </p>
+    </div>
+
+    <!-- 右边图片 -->
+    <div style="flex:1; min-width:250px; text-align:center;">
+      <img src="img/about.jpg" alt="TP Dental Setia Alam" style="width:400px; max-width:100%; border-radius:12px;">
+    </div>
+
+  </div>
+</section>
+
 
   <section id="services">
     <h2>Our Services</h2>
