--- a/index.html
+++ b/index.html
@@ -95,17 +95,24 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <header>
-    <img src="img/logo.png" alt="TP Dental Setia Alam Logo" class="logo">
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#doctor">Our Doctor</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <img src="img/logo.png" alt="TP Dental Setia Alam Logo" class="logo">
+
+  <!-- 汉堡按钮 -->
+  <button class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
+    <i class="fas fa-bars"></i>
+  </button>
+
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#doctor">Our Doctor</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <section id="home" class="hero">
     <img src="img/your-hero-image.png" alt="Dental Clinic">
