--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
   <section id="services">
     <h2>Our Services</h2>
     <div class="services">
-      <div><img src="img/service1.png" alt="General Dentistry"><h3>General Dentistry</h3></div>
-      <div><img src="img/service2.jpg" alt="Dentures"><h3>Dentures</h3></div>
-      <div><img src="img/service3.png" alt="Oral Surgery"><h3>Oral Surgery</h3></div>
-      <div><img src="img/service4.png" alt="Braces"><h3>Braces</h3></div>
-      <div><img src="img/service5.jpg" alt="Children Dentistry"><h3>Children Dentistry</h3></div>
+      <div><img src="img/services1.png" alt="General Dentistry"><h3>General Dentistry</h3></div>
+      <div><img src="img/services2.jpg" alt="Dentures"><h3>Dentures</h3></div>
+      <div><img src="img/services3.png" alt="Oral Surgery"><h3>Oral Surgery</h3></div>
+      <div><img src="img/services4.png" alt="Braces"><h3>Braces</h3></div>
+      <div><img src="img/services5.jpg" alt="Children Dentistry"><h3>Children Dentistry</h3></div>
     </div>
   </section>
 
