--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
       <!-- Right Contact Info -->
       <div class="contact-info">
         <p><i class="fab fa-whatsapp"></i><a href="https://wa.me/601112700876" target="_blank">011-1270 0876</a></p>
-        <p><i class="fab fa-instagram"></i><a href="https://instagram.com/tpdental_medical" target="_blank">tpdental_medical</a></p>
-        <p><i class="fab fa-facebook"></i><a href="https://facebook.com/TPDentalSetiaAlam" target="_blank">TP Dental Setia Alam</a></p>
+        <p><i class="fab fa-instagram"></i><a href="https://www.instagram.com/tpdental__/" target="_blank">tpdental_medical</a></p>
+        <p><i class="fab fa-facebook"></i><a href="https://www.facebook.com/tpdentalmedical/" target="_blank">TP Dental Setia Alam</a></p>
         <p><i class="fas fa-map-marker-alt"></i>No 65, (Ground Floor) Jalan Setia Gemilang BG U13/BG, Precint 15, Setia Alam Seksyen U13, 40170 Shah Alam, Selangor</p>
       </div>
     </div>
@@ -198,7 +198,7 @@
   </footer>
 
   <!-- WhatsApp Floating Button -->
-  <a href="https://wasap.me/601112700876" class="whatsapp-float" target="_blank">
+  <a href="https://wa.me/601112700876" class="whatsapp-float" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
 </body>
