--- a/index.html
+++ b/index.html
@@ -87,12 +87,27 @@
     footer {background: #0077b6; color: white; text-align: center; padding: 15px;}
     /* WhatsApp Floating Button */
     .whatsapp-float {
-      position: fixed; width: 60px; height: 60px; bottom: 20px; right: 20px;
-      background-color: #25d366; color: #fff; border-radius: 50%; text-align: center;
-      font-size: 30px; box-shadow: 2px 2px 3px #999; z-index: 100;
-      display: flex; align-items: center; justify-content: center;
-    }
-    .whatsapp-float i {margin: 0;}
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;  /* ✅ 移除底线 */
+}
+.whatsapp-float:hover {
+  background-color: #20b358;
+  text-decoration: none;  /* ✅ 确保 hover 也不会出现底线 */
+}
   </style>
 </head>
 <body>
