--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TP Dental Setia Alam</title>
   <!-- Font Awesome for Icons -->
+  <link rel="icon" type="image/logoicon.jpg" href="images/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Google Fonts -->
@@ -184,7 +185,7 @@
 
   <section id="reviews" class="reviews">
     <h2>Google Reviews</h2>
-    <a href="https://www.google.com/maps/place/TP+Dental+Setia+Alam+(Dental+Clinic+Setia+Alam)/@3.1279642,101.4664279,17z/data=!3m1!5s0x31cc5171dd958755:0xb3fc4439e7acaa70!4m8!3m7!1s0x31cc516ad822e9bb:0xf1bcac0f9386655a!8m2!3d3.1279642!4d101.4690028!9m1!1b1!16s%2Fg%2F11s5gk7qxc?entry=ttu&g_ep=EgoyMDI1MDkyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="review-link"><i class="fa-brands fa-google"></i>   Make A Review</a>
+    <a href="https://www.google.com/maps/place/TP+Dental+Setia+Alam+(Dental+Clinic+Setia+Alam)/@3.1279642,101.4664279,17z/data=!3m1!5s0x31cc5171dd958755:0xb3fc4439e7acaa70!4m8!3m7!1s0x31cc516ad822e9bb:0xf1bcac0f9386655a!8m2!3d3.1279642!4d101.4690028!9m1!1b1!16s%2Fg%2F11s5gk7qxc?entry=ttu&g_ep=EgoyMDI1MDkyMS4wIKXMDSoASAFQAw%3D%3D" target="_blank" class="review-link"><i class="fa-brands fa-google"></i>&nbsp;Make A Review</a>
     <img src="img/review1.png" alt="Review Screenshot 1">
     <img src="img/review2.png" alt="Review Screenshot 2">
     <img src="img/review3.png" alt="Review Screenshot 3">
