--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       z-index: 1000;
       border-bottom: 1px solid #ddd;
     }
-    header img.logo {height: 80px;}
+    header img.logo {height: 100px;width: auto;}
     nav ul {list-style: none; display: flex; margin: 0; padding: 0;}
     nav ul li {margin-left: 20px;}
     nav ul li a {
