--- a/index.html
+++ b/index.html
@@ -47,24 +47,42 @@
     section {padding: 60px 20px; text-align: center;}
     h2 {font-weight: 700;}
     .hero img {max-width: 100%; height: auto; border-radius: 10px;}
-    .hero button {
-      margin-top: 20px; padding: 10px 20px; background: #0077b6;
-      color: #fff; border: none; border-radius: 5px; cursor: pointer;
-    }
-    .services {
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-    }
-    .services div {
-      background: linear-gradient(135deg, #058e97, #0962c8);
-      border-radius: 12px; padding: 20px; color: #fff;
-    }
-    .services img {
+    /* Get in Touch 按钮 */
+.cta-btn {
+  margin-top: 20px;
+  padding: 18px 40px;            /* ✅ 改大按钮 */
+  font-size: 20px;               /* ✅ 放大文字 */
+  font-weight: 700;
+  background: linear-gradient(135deg, #058e97, #0962c8); /* ✅ 渐变背景 */
+  color: #fff;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+.cta-btn:hover {
+  opacity: 0.9;                   /* ✅ hover 效果 */
+}
+
+/* Services 区块 */
+.services div {
+  background: linear-gradient(135deg, #058e97, #0962c8); /* ✅ 渐变背景 */
+  border-radius: 12px;
+  padding: 20px;
+  color: #fff;
+  text-align: center;
+}
+.services div h3 {
+  margin-top: 10px;
+  font-weight: 600;
+}
+.services img {
   width: 100%;
-  height: 250px;          /* 统一高度，可以改成 300px/350px */
-  object-fit: cover;      /* 自动裁切，不会变形 */
+  height: 250px;       /* ✅ 强制统一高度 */
+  object-fit: cover;   /* ✅ 保持比例，不会变形 */
   border-radius: 12px;
 }
+
     .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
     .doctor-text {flex: 1; min-width: 250px;}
     .doctor-photo {flex: 1; min-width: 250px; text-align: center;}
@@ -134,8 +152,12 @@
 
   <section id="home" class="hero">
     <img src="img/your-hero-image.png" alt="Dental Clinic">
-    <br>
-    <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">Get in Touch</button>
+   <section id="home" class="hero">
+  <button class="cta-btn" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">
+    Get in Touch
+  </button>
+</section>
+
   </section>
 
   <section id="about" style="padding:60px 20px;">
