--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </section>
 
   <section id="about" style="padding:60px 20px;">
-  <h2 style="text-align:center; font-weight:700;">About Us</h2>
+  <h2 style="text-align:center; font-weight:700;">TP Dental Setia Alam</h2>
   <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:40px; margin-top:30px;">
 
     <!-- 左边文字 -->
