--- a/index.html
+++ b/index.html
@@ -179,13 +179,12 @@
 
   </section>
 
-  <section id="about" style="padding:60px 20px;">
-  <h2 style="text-align:center; font-weight:700;">TP Dental Setia Alam</h2>
+  <section id="about" style="padding:60px 20px;background: linear-gradient(135deg, #058e97, #0962c8);">
   <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:40px; margin-top:30px;">
 
     <!-- 左边文字 -->
     <div style="flex:1; min-width:250px; text-align:left;">
-      <h3 style="font-weight:700;">TP DENTAL SETIA ALAM</h3>
+      <h3 style="font-weight:1000;">TP DENTAL SETIA ALAM</h3>
       <p>
         is committed in delivering the best comprehensive treatment in each patient. 
         We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.
