--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   </section>
 
-  <section id="about" style="padding:60px 20px;background: linear-gradient(135deg, #058e97, #0962c8);">
+  <section id="about" style="padding:60px 20px;background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5)); ">
   <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:40px; margin-top:30px;">
 
     <!-- 左边文字 -->
