--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <!-- 左边文字 -->
     <div style="flex:1; min-width:250px; text-align:left;">
       <h3 style="font-weight:1000;">TP DENTAL SETIA ALAM</h3>
-      <p>
+      <p style="font-color:#ffffff;">
         is committed in delivering the best comprehensive treatment in each patient. 
         We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.
         <br><br>
