--- a/index.html
+++ b/index.html
@@ -101,6 +101,23 @@
   border-radius: 12px;
 }
 
+#about {
+  padding: 60px 20px;
+  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5)); 
+  border-radius: 10px;
+}
+
+#about h2 {
+  color: #102770;
+  font-weight: 700;
+}
+
+#about p {
+  color: #fff;
+  text-align: justify;
+  line-height: 1.8; /* 让排版更美观 */
+}
+    
     .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
     .doctor-text {flex: 1; min-width: 250px;}
     .doctor-photo {flex: 1; min-width: 250px; text-align: center;}
@@ -184,8 +201,8 @@
 
     <!-- 左边文字 -->
     <div style="flex:1; min-width:250px; text-align:left;">
-      <h3 style="font-weight:1000;">TP DENTAL SETIA ALAM</h3>
-      <p style="font-color:#ffffff;">
+      <h2">TP DENTAL SETIA ALAM</h2>
+      <p">
         is committed in delivering the best comprehensive treatment in each patient. 
         We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.
         <br><br>
