--- a/index.html
+++ b/index.html
@@ -103,20 +103,40 @@
 
 #about {
   padding: 60px 20px;
-  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5)); 
+  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5));
   border-radius: 10px;
 }
 
-#about h2 {
-  color: #102770;
-  font-weight: 700;
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
 }
 
-#about p {
+.about-img {
+  max-width: 350px;
+  border-radius: 10px;
+}
+
+.about-text {
+  flex: 1;
+  min-width: 280px;
+}
+
+.about-text h2 {
+  color: #102770;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.about-text p {
   color: #fff;
   text-align: justify;
-  line-height: 1.8; /* 让排版更美观 */
+  line-height: 1.8;
 }
+
     
     .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
     .doctor-text {flex: 1; min-width: 250px;}
@@ -196,20 +216,21 @@
 
   </section>
 
-  <section id="about" style="padding:60px 20px;background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5)); ">
-  <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:40px; margin-top:30px;">
-
-    <!-- 左边文字 -->
-    <div style="flex:1; min-width:250px; text-align:left;">
-      <h2">TP DENTAL SETIA ALAM</h2>
-      <p">
+  <section id="about">
+  <div class="about-container">
+    <img src="img/about.jpg" alt="TP Dental Setia Alam" class="about-img">
+    <div class="about-text">
+      <h2>TP DENTAL SETIA ALAM</h2>
+      <p>
         is committed in delivering the best comprehensive treatment in each patient. 
-        We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.
-        <br><br>
-        We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile,
+        We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
+        We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, 
         all within a professional and welcoming environment.
       </p>
     </div>
+  </div>
+</section>
+
 
     <!-- 右边图片 -->
     <div style="flex:1; min-width:250px; text-align:center;">
