--- a/index.html
+++ b/index.html
@@ -126,12 +126,14 @@
 }
 
 .about-text h2 {
+  font-family: 'Poppins', sans-serif;
   color: #102770;
-  font-weight: 700;
+  font-weight: 900;
   margin-bottom: 20px;
 }
 
 .about-text p {
+  font-family: 'Poppins', sans-serif;
   color: #fff;
   text-align: justify;
   line-height: 1.8;
