--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
   color: #fff;
   text-align: justify;
   line-height: 1.8;
+  max-width: 350px;   /* 限制宽度 */
+  margin: 0 auto;     /* 居中对齐 */
 }
-
     
     .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
     .doctor-text {flex: 1; min-width: 250px;}
