--- a/index.html
+++ b/index.html
@@ -101,50 +101,11 @@
   border-radius: 12px;
 }
 
-#about {
-  padding: 60px 20px;
-  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5));
-  border-radius: 10px;
-}
-
-.about-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-}
-
-.about-img {
-  max-width: 350px;
-  border-radius: 10px;
-}
-
-.about-text {
-  flex: 1;
-  min-width: 280px;
-}
-
-.about-text h2 {
-  font-family: 'Poppins', sans-serif;
-  color: #102770;
-  font-weight: 900;
-  margin-bottom: 20px;
-}
-
-.about-text p {
-  font-family: 'Poppins', sans-serif;
-  color: #fff;
-  text-align: justify;
-  line-height: 1.8;
-  max-width: 350px;   /* 限制宽度 */
-  margin: 0 auto;     /* 居中对齐 */
-}
-    
+.services img {width: 100%; border-radius: 12px;}
     .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
     .doctor-text {flex: 1; min-width: 250px;}
     .doctor-photo {flex: 1; min-width: 250px; text-align: center;}
-    .doctor-photo img {width: 100%;}
+    .doctor-photo img {width: 250px; border-radius: 10px;}
     .reviews {position: relative;}
     .reviews img {max-width: 30%; margin: 10px; border-radius: 10px;}
     .review-link {
@@ -220,19 +181,11 @@
   </section>
 
   <section id="about">
-  <div class="about-container">
-    <img src="img/about.jpg" alt="TP Dental Setia Alam" class="about-img">
-    <div class="about-text">
-      <h2>TP DENTAL SETIA ALAM</h2>
-      <p>
-        is committed in delivering the best comprehensive treatment in each patient. 
-        We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
-        We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, 
-        all within a professional and welcoming environment.
-      </p>
-    </div>
-  </div>
-</section>
+    <img src="img/about.jpg" alt="TP Dental Setia Alam Logo" class="logo">
+    <h2 style="color: #fff;">TP DENTAL SETIA ALAM</h2>
+    <p style="color: #fff;">is committed in delivering the best comprehensive treatment in each patient. We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
+    We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, all within a professional and welcoming environment.</p>
+  </section>
 
 
     <!-- 右边图片 -->
