--- a/index.html
+++ b/index.html
@@ -82,30 +82,79 @@
 }
 
 
-/* Services 区块 */
-.services div {
-  background: linear-gradient(135deg, #058e97, #0962c8); /* ✅ 渐变背景 */
+/* About Us */
+#about {
+  padding: 60px 20px;
+  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5));
+  border-radius: 10px;
+}
+
+.about-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.about-text {
+  flex: 1;
+  min-width: 280px;
+}
+
+.about-text h2 {
+  color: #102770;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.about-text p {
+  color: #fff;
+  text-align: justify;
+  line-height: 1.8;
+  max-width: 350px; /* 限制宽度 */
+  margin: 0 auto;
+}
+
+.about-img {
+  flex: 1;
+  min-width: 280px;
+  text-align: center;
+}
+
+.about-img img {
+  max-width: 350px;
+  border-radius: 10px;
+}
+
+/* Services */
+#services {
+  padding: 60px 20px;
+  text-align: center;
+}
+
+.services {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.service-card {
+  background: linear-gradient(135deg, #058e97, #0962c8);
   border-radius: 12px;
   padding: 20px;
   color: #fff;
   text-align: center;
 }
-.services div h3 {
-  margin-top: 10px;
-  font-weight: 600;
-}
-.services img {
-  width: 100%;
-  height: 250px;       /* ✅ 强制统一高度 */
-  object-fit: cover;   /* ✅ 保持比例，不会变形 */
-  border-radius: 12px;
-}
 
+.service-card img {
+  width: 100%;
+  height: 200px; /* 统一高度 */
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
 .services img {width: 100%; border-radius: 12px;}
-    .doctor {display: flex; flex-wrap: wrap; align-items: center; justify-content: center; gap: 40px; text-align: left;}
-    .doctor-text {flex: 1; min-width: 250px;}
-    .doctor-photo {flex: 1; min-width: 250px; text-align: center;}
-    .doctor-photo img {width: 250px; border-radius: 10px;}
     .reviews {position: relative;}
     .reviews img {max-width: 30%; margin: 10px; border-radius: 10px;}
     .review-link {
@@ -180,33 +229,49 @@
 
   </section>
 
-  <section id="about">
-    <img src="img/about.jpg" alt="TP Dental Setia Alam Logo" class="logo">
-    <h2 style="color: #fff;">TP DENTAL SETIA ALAM</h2>
-    <p style="color: #fff;">is committed in delivering the best comprehensive treatment in each patient. We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
-    We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, all within a professional and welcoming environment.</p>
-  </section>
-
-
-    <!-- 右边图片 -->
-    <div style="flex:1; min-width:250px; text-align:center;">
-      <img src="img/about.jpg" alt="TP Dental Setia Alam" style="width:800px; max-width:100%; border-radius:12px;">
+ <section id="about">
+  <div class="about-container">
+    <div class="about-text">
+      <h2>TP DENTAL SETIA ALAM</h2>
+      <p>
+        is committed in delivering the best comprehensive treatment in each patient. 
+        We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
+        We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, 
+        all within a professional and welcoming environment.
+      </p>
     </div>
-
+    <div class="about-img">
+      <img src="img/about.jpg" alt="TP Dental Setia Alam Logo">
+    </div>
   </div>
 </section>
 
-
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="services">
-      <div><img src="img/services1.png" alt="General Dentistry"><h3>General Dentistry</h3></div>
-      <div><img src="img/services2.jpg" alt="Dentures"><h3>Dentures</h3></div>
-      <div><img src="img/services3.png" alt="Oral Surgery"><h3>Oral Surgery</h3></div>
-      <div><img src="img/services4.png" alt="Braces"><h3>Braces</h3></div>
-      <div><img src="img/services5.jpg" alt="Children Dentistry"><h3>Children Dentistry</h3></div>
+<section id="services">
+  <h2>Our Services</h2>
+  <div class="services">
+    <div class="service-card">
+      <img src="img/service1.png" alt="General Dentistry">
+      <h3>General Dentistry</h3>
     </div>
-  </section>
+    <div class="service-card">
+      <img src="img/service2.jpg" alt="Dentures">
+      <h3>Dentures</h3>
+    </div>
+    <div class="service-card">
+      <img src="img/service3.png" alt="Oral Surgery">
+      <h3>Oral Surgery</h3>
+    </div>
+    <div class="service-card">
+      <img src="img/service4.png" alt="Braces">
+      <h3>Braces</h3>
+    </div>
+    <div class="service-card">
+      <img src="img/service5.jpg" alt="Children Dentistry">
+      <h3>Children Dentistry</h3>
+    </div>
+  </div>
+</section>
+
 
   <section id="doctor" class="doctor">
     <div class="doctor-text">
