--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <div class="services">
     <div class="service-card">
           <h3>General Dentistry</h3>
-      <img src="img/servicec1.png" alt="General Dentistry">
+      <img src="img/services1.png" alt="General Dentistry">
     </div>
     <div class="service-card">
             <h3>Dentures</h3>
