--- a/index.html
+++ b/index.html
@@ -160,6 +160,46 @@
       position: absolute; top: 10px; right: 10px; background: #0077b6;
       color: #fff; padding: 8px 12px; border-radius: 5px; text-decoration: none;
     }
+
+    /* Doctor Section */
+.doctor {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 60px 20px;
+  background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5));
+  border-radius: 10px;
+  flex-wrap: wrap; /* 手机时自动换行 */
+}
+
+.doctor-text {
+  flex: 1;
+  max-width: 500px;
+}
+
+.doctor-text h2 {
+  color: #102770;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.doctor-text p {
+  color: #fff;
+  text-align: justify;
+  line-height: 1.8;
+}
+
+.doctor-photo {
+  flex: 1;
+  text-align: center;
+}
+
+.doctor-photo img {
+  max-width: 300px;
+  width: 100%;
+  border-radius: 15px;
+}
+    
     /* Contact Section */
     .contact-container {
       display: flex; flex-wrap: wrap; gap: 30px; align-items: flex-start; justify-content: center; margin-top: 20px;
@@ -271,8 +311,7 @@
   </div>
 </section>
 
-
-  <section id="doctor" class="doctor">
+<section id="doctor" class="doctor">
     <div class="doctor-text">
       <h2>DR KELVIN QUAH (I.D.G, USU)</h2>
       <p>A highly skilled dental surgeon with 8 years of experience. Dr Kelvin graduated from Universitas Sumatera Utara in 2016. After returning to Malaysia, Dr Kelvin was posted to Langkawi. He served in Klinik Pergigian Air Hangat and Hospital Sultanah Maliha focusing on outpatient and trauma cases. Dr Kelvin also had the opportunity to serve as a junior Dental Officer at the Oral Maxillofacial Surgery Department and Paediatric Dental Department at Hospital Sultanah Bahiyah.<br><br>
