--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 .doctor-text {
   flex: 1;
   max-width: 500px;
+  align-left: 100px;
 }
 
 .doctor-text h2 {
@@ -195,7 +196,7 @@
 }
 
 .doctor-photo img {
-  max-width: 300px;
+  max-width: 800px;
   width: 100%;
   border-radius: 15px;
 }
