--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     .reviews {position: relative;}
     .reviews img {max-width: 30%; margin: 10px; border-radius: 10px;}
     .review-link {
-      position: absolute; top: 10px; right: 10px; background: #0077b6;
+      position: absolute; top: 10px; right: 10px; background: linear-gradient(135deg, #058e97, #0962c8);
       color: #fff; padding: 8px 12px; border-radius: 5px; text-decoration: none;
     }
 
