--- a/index.html
+++ b/index.html
@@ -161,12 +161,13 @@
       color: #fff; padding: 8px 12px; border-radius: 5px; text-decoration: none;
     }
 
-    /* Doctor Section */
+  /* Doctor Section */
 .doctor {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 20px 20px;
+  justify-content: center; /* 让内容靠中间 */
+  gap: 40px; /* 左右文字和图片之间留空 */
+  padding: 40px 20px;
   background: linear-gradient(135deg, rgba(5, 142, 151, 0.5), rgba(9, 98, 200, 0.5));
   border-radius: 10px;
   flex-wrap: wrap; /* 手机时自动换行 */
@@ -175,20 +176,21 @@
 .doctor-text {
   flex: 1;
   max-width: 500px;
+  text-align: center; /* 让文字整体居中 */
 }
 
 .doctor-text h2 {
   color: #102770;
   font-weight: 700;
   margin-bottom: 20px;
-  padding: 20px 20px;
 }
 
 .doctor-text p {
   color: #fff;
   text-align: justify;
   line-height: 1.8;
-  padding: 20px 20px;
+  margin: 0 auto;
+  max-width: 400px; /* 限制段落宽度，保证更整齐 */
 }
 
 .doctor-photo {
@@ -197,10 +199,11 @@
 }
 
 .doctor-photo img {
-  max-width: 700px;
+  max-width: 350px; /* 缩小一点，避免太大 */
   width: 100%;
   border-radius: 15px;
 }
+
     
     /* Contact Section */
     .contact-container {
