--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       text-decoration: none;
       color: #000;
     }
-    footer {background: #0077b6; color: white; text-align: center; padding: 15px;}
+    footer {background: linear-gradient(135deg, #058e97, #0962c8); color: white; text-align: center; padding: 15px;}
     /* WhatsApp Floating Button */
     .whatsapp-float {
   position: fixed;
