--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <header>
-    <img src="img/logo.png" alt="TP Dental Setia Alam Logo" class="logo">
+     <a href="#home">
+      <img src="img/logo.png" alt="TP Dental Setia Alam Logo">
+    </a>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
