--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       margin: 0; padding: 0;
       background: #fff; color: #333;
     }
-    header {
+   header {
   background: #fff;
-  padding: 1rem 2rem;   /* 调高导航高度 */
+  padding: 1rem 2rem;   /* 调整高度 */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,13 +35,6 @@
   top: 0;
   z-index: 1000;
   border-bottom: 1px solid #ddd;
-}
-
-/* Logo 图片大小 */
-.logo img {
-  height: 60px;   /* 普通网站 logo 高度 */
-  width: auto;
-  display: block;
 }
 
 /* 导航菜单 */
@@ -60,8 +53,8 @@ nav ul li a {
   color: #000;
   text-decoration: none;
   font-weight: 700;
-  font-size:
-
+  font-size: 20px;   /* 比默认大 */
+}
     section {padding: 60px 20px; text-align: center;}
     h2 {font-weight: 900;}
     .hero img {max-width: 100%; height: auto; border-radius: 10px;}
@@ -268,7 +261,7 @@ nav ul li a {
 
   <header>
      <a href="#home">
-      <img src="img/logo.png" alt="TP Dental Setia Alam Logo">
+      <img src="img/logo.png" alt="TP Dental Setia Alam Logo" style="height:60px; width:auto; display:block;">
     </a>
     <nav>
       <ul>
