--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ nav ul li a {
       color: #fff; padding: 8px 12px; border-radius: 5px; text-decoration: none;
     }
 
-  /* Doctor Section */
+ /* Doctor Section */
 .doctor {
   display: flex;
   align-items: center;
@@ -186,7 +186,7 @@ nav ul li a {
 
 .doctor-text {
   flex: 1;
-  max-width: 300px;
+  max-width: 500px;
   text-align: center; /* 让文字整体居中 */
 }
 
@@ -210,11 +210,10 @@ nav ul li a {
 }
 
 .doctor-photo img {
-  max-width: 300px; 
+  max-width: 350px; /* 缩小一点，避免太大 */
   width: 100%;
   border-radius: 15px;
 }
-
     
     /* Contact Section */
     .contact-container {
