--- a/index.html
+++ b/index.html
@@ -115,12 +115,14 @@ nav ul li a {
 
 .about-text h2 {
   color: #102770;
+  font-size:700px;
   font-weight: 1500;
   margin-bottom: 20px;
 }
 
 .about-text p {
   color: #fff;
+  font-size:400px;
   text-align: justify;
   line-height: 1.8;
   max-width: 700px; /* 限制宽度 */
@@ -186,6 +188,7 @@ nav ul li a {
 
 .doctor-text {
   flex: 1;
+  fint-size:700px;
   max-width: 700px;
   text-align: center; /* 让文字整体居中 */
 }
