--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ nav ul li a {
   color: #000;
   text-decoration: none;
   font-weight: 900;
-  font-size: 20px;   /* 比默认大 */
+  font-size: 40px;   /* 比默认大 */
 }
     section {padding: 60px 20px; text-align: center;}
     h2 {font-weight: 900;}
@@ -74,16 +74,16 @@ nav ul li a {
 /* 按钮覆盖在图片中下 */
 .hero-container .cta-btn {
   position: absolute;
-  bottom: 10%;               /* ✅ 距离底部 10% */
+  bottom: -10%;               /* ✅ 距离底部 10% */
   left: 50%;                 /* ✅ 居中 */
   transform: translateX(-50%);
   padding: 18px 40px;
-  font-size: 20px;
+  font-size: 30px;
   font-weight: 700;
   background: linear-gradient(135deg, #058e97, #0962c8);
   color: #fff;
   border: none;
-  border-radius: 8px;
+  border-radius: 10px;
   cursor: pointer;
   transition: 0.3s ease;
 }
@@ -261,7 +261,7 @@ nav ul li a {
 
   <header>
      <a href="#home">
-      <img src="img/logo.png" alt="TP Dental Setia Alam Logo" style="height:80px; width:auto; display:block;">
+      <img src="img/logo.png" alt="TP Dental Setia Alam Logo" style="height:80px; width:100px; display:block;">
     </a>
     <nav>
       <ul>
