--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ nav ul li a {
 
   <header>
      <a href="#home">
-      <img src="img/logo.png" alt="TP Dental Setia Alam Logo" style="height:80px; width:1000px; display:block;">
+      <img src="img/logo.png" alt="TP Dental Setia Alam Logo" style="height:80px; width:400px; display:block;">
     </a>
     <nav>
       <ul>
@@ -371,7 +371,7 @@ nav ul li a {
   </footer>
 
   <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/601112700876" class="whatsapp-float" target="_blank">
+  <a href="https://wa.me/601112700876" class="whatsapp-float" target="_blank">Get In Touch
     <i class="fab fa-whatsapp"></i>
   </a>
 </body>
