--- a/index.html
+++ b/index.html
@@ -244,29 +244,7 @@ nav ul li a {
       color: #000;
     }
     footer {background: linear-gradient(135deg, #058e97, #0962c8); color: white; text-align: center; padding: 15px;}
-    /* WhatsApp Floating Button */
-    .whatsapp-float {
-  position: fixed;
-  width: 60px;
-  height: 60px;
-  bottom: 20px;
-  right: 20px;
-  background-color: #25d366;
-  color: #fff;
-  border-radius: 50px;
-  text-align: center;
-  font-size: 30px;
-  box-shadow: 2px 2px 3px #999;
-  z-index: 100;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;  /* ✅ 移除底线 */
-}
-.whatsapp-float:hover {
-  background-color: #20b358;
-  text-decoration: none;  /* ✅ 确保 hover 也不会出现底线 */
-}
+
   </style>
 </head>
 <body>
@@ -385,12 +363,14 @@ nav ul li a {
     <p>Privacy Policy&copy; 2025 TP Dental Setia Alam. All Rights Reserved.</p>
   </footer>
 
-  <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/601112700876" class="whatsapp-float" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-    <button class="cta-btn2" onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'});">
-      Get in Touch
-    </button>
-  </a>
+ <a href="https://wa.me/601112700876" target="_blank" 
+   style="position: fixed; bottom: 20px; right: 20px; 
+          background: #25D366; color: white; border-radius: 50px; 
+          padding: 10px 20px; display: flex; align-items: center; 
+          text-decoration: none; font-weight: bold; 
+          box-shadow: 0 4px 6px rgba(0,0,0,0.2); z-index:1000;">
+  <i class="fab fa-whatsapp" style="font-size:24px; margin-right:10px;"></i>
+  GET IN TOUCH
+</a>
 </body>
 </html>
