--- a/index.html
+++ b/index.html
@@ -363,14 +363,16 @@ nav ul li a {
     <p>Privacy Policy&copy; 2025 TP Dental Setia Alam. All Rights Reserved.</p>
   </footer>
 
- <a href="https://wa.me/601112700876" target="_blank" 
+ <!-- WhatsApp Floating Button -->
+<a href="https://wa.me/601112700876" target="_blank" 
    style="position: fixed; bottom: 20px; right: 20px; 
-          background: #25D366; color: white; border-radius: 50px; 
-          padding: 10px 20px; display: flex; align-items: center; 
-          text-decoration: none; font-weight: bold; 
+          background: #25D366; color: white; border-radius: 30px; 
+          padding: 12px 20px; display: flex; align-items: center; 
+          text-decoration: none; font-weight: bold; font-size: 16px;
           box-shadow: 0 4px 6px rgba(0,0,0,0.2); z-index:1000;">
-  <i class="fab fa-whatsapp" style="font-size:24px; margin-right:10px;"></i>
+  <i class="fab fa-whatsapp" style="font-size:22px; margin-right:10px;"></i>
   GET IN TOUCH
 </a>
+
 </body>
 </html>
