--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ nav ul li a {
   margin-bottom: 20px;
 }
 
-.about-text p {
+.about-text h3 {
   color: #fff;
   text-align: justify;
   line-height: 1.8;
@@ -283,12 +283,12 @@ nav ul li a {
   <div class="about-container">
     <div class="about-text">
       <h2>TP DENTAL SETIA ALAM</h2>
-      <p>
+      <h3>
         is committed in delivering the best comprehensive treatment in each patient. 
         We offer multiple services ranging from general dentistry, preventive, child and orthodontic treatments.<br><br>
         We at TP Setia Alam are dedicated to help you achieve optimal oral health and a confident smile, 
         all within a professional and welcoming environment.
-      </p>
+      </h3>
     </div>
     <div class="about-img">
       <img src="img/about.jpg" alt="TP Dental Setia Alam Logo">
